Seperated  handlers into seperate file and added some swagger docs
