# docs/swagger.json
@@ -25,14 +25,73 @@
             "get": {
                 "description": "Returns the authenticated user",
                 "tags": [
-                    "user"
+                    "self"
                 ],
                 "summary": "Get Authenticated User",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SelfUser"
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "updates the authenticated user",
+                "tags": [
+                    "self"
+                ],
+                "summary": "Updates the Authenticated User",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new user",
+                "tags": [
+                    "self"
+                ],
+                "summary": "Add New Authenticated User",
+                "parameters": [
+                    {
+                        "description": "update params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateSelf"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -51,7 +110,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.SelfUser"
+                                "$ref": "#/definitions/models.User"
                             }
                         }
                     }
@@ -65,11 +124,43 @@
                     "user"
                 ],
                 "summary": "Get a User by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SelfUser"
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/utils/username": {
+            "get": {
+                "description": "Checks if a username is available",
+                "tags": [
+                    "utils"
+                ],
+                "summary": "Is a Username Available",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -128,10 +219,24 @@
         }
     },
     "definitions": {
-        "models.SelfUser": {
+        "models.Token": {
             "type": "object",
             "properties": {
-                "email": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateSelf": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "bio": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "id": {
@@ -140,15 +245,36 @@
                 "name": {
                     "type": "string"
                 },
-                "role": {
+                "public": {
+                    "type": "boolean"
+                },
+                "username": {
                     "type": "string"
                 }
             }
         },
-        "models.Token": {
+        "models.User": {
             "type": "object",
             "properties": {
-                "token": {
+                "avatar": {
+                    "type": "string"
+                },
+                "bio": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "public": {
+                    "type": "boolean"
+                },
+                "username": {
                     "type": "string"
                 }
             }
